# compatibillabuddy

./: .editorconfig  .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
demo/: run_demo.ps1  setup_broken_env.ps1
src/compatibillabuddy/: __init__.py  __main__.py
src/compatibillabuddy/agent/: __init__.py  config.py  core.py  tools.py
src/compatibillabuddy/backends/: __init__.py
src/compatibillabuddy/cli/: __init__.py  agent.py  doctor.py  repair.py
src/compatibillabuddy/engine/: __init__.py  doctor.py  models.py  report.py
src/compatibillabuddy/explain/: __init__.py
src/compatibillabuddy/hardware/: __init__.py  inspector.py  probe.py
src/compatibillabuddy/kb/: __init__.py  engine.py
src/compatibillabuddy/kb/rulepacks/: jax.toml  ml_core.toml  onnxruntime.toml  transformers.toml
src/compatibillabuddy/validate/: __init__.py
tests/: conftest.py
tests/integration/: test_agent_live.py  test_repair_live.py
tests/unit/: test_agent_config.py  test_agent_core.py  test_agent_tools.py  test_cli.py  test_cli_agent.py  test_cli_doctor.py  test_cli_repair.py  test_doctor.py  test_hardware_probe.py  test_inspector.py  test_kb_engine.py  test_kb_jax.py  test_kb_onnxruntime.py  test_kb_transformers.py  test_models.py  test_prerelease.py  test_repair_tools.py  test_report.py  test_retry.py  test_version.py
